--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   gap: ^3.0.1
+  flutter_launcher_icons: "^0.13.1"
 
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/logo.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -61,6 +68,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/images/logo.png
     - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
